# Ivy-Framework

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Ivy-Framework.sln  README.md  build_errors.txt  llms.txt
.config/: dotnet-tools.json
.husky/: pre-commit
.releases/: CreateNotes.ps1  prompt-refine.md  prompt.md  weekly-notes-2025-12-04.md  weekly-notes-2025-12-17.md  weekly-notes-2025-12-24.md  weekly-notes-2026-01-08.md
Ivy.Analyser/: Ivy.Analyser.csproj  README.md
Ivy.Auth.Auth0/: Auth0AuthProvider.cs  Ivy.Auth.Auth0.csproj
Ivy.Auth.Authelia/: AutheliaAuthProvider.cs  Ivy.Auth.Authelia.csproj
Ivy.Auth.Clerk/: Ivy.Auth.Clerk.csproj
Ivy.Auth.GitHub/: Ivy.Auth.GitHub.csproj  README.md
Ivy.Auth.MicrosoftEntra/: Ivy.Auth.MicrosoftEntra.csproj  MicrosoftEntraAuthProvider.cs
Ivy.Auth.Supabase/: Ivy.Auth.Supabase.csproj  SupabaseAuthProvider.cs
Ivy.Auth.Supabase.Test/: Ivy.Auth.Supabase.Test.csproj
Ivy.Benchmarks/: Ivy.Benchmarks.csproj  Program.cs
Ivy.Database.Generator.Toolkit/: DatabaseGenerator.cs  Ivy.Database.Generator.Toolkit.csproj
Ivy.Docs/: Dockerfile  Ivy.Docs.csproj
Ivy.Docs.Shared/: Ivy.Docs.Shared.csproj
Ivy.Docs.Test/: Ivy.Docs.Test.csproj
Ivy.Docs.Tools/: ApiDocGenerator.cs  ConvertCommand.cs  Ivy.Docs.Tools.csproj  LlmMarkdownGenerator.cs  MarkdownConverter.cs  Utils.cs
Ivy.Docs.Tools.Test/: Ivy.Docs.Tools.Test.csproj
Ivy.Samples/: Dockerfile  (+2 more)
src/Ivy.Docs.Tools/rust_cli/: Cargo.toml
src/Ivy.Docs.Tools/rust_cli/src/: converter.rs  file_hash.rs  link_converter.rs  llm_markdown.rs  main.rs  utils.rs
(+3726 files in other folders)
