
[package]
name = "rust_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.3"
lazy_static = "1.5.0"
markdown = "1.0.0"
rayon = "1.11.0"
regex = "1.12.3"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
sha2 = "0.11.0"
walkdir = "2.5.0"

